Added tipping page.

--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -4,6 +4,18 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content [ngStyle]="{'background-image': 'url(' + localPhoto + ')', 'background-repeat': 'no-repeat', 'background-size': 'cover'}">
-<h1 style="color:white; font-weight: bold;">{{selectedVenue.name}}</h1>
+<!--TODO work out background image style [ngStyle]="{'background-image': 'url(' + localPhoto + ')', 'background-repeat': 'no-repeat', 'background-size': 'cover'}"-->
+<ion-content>
+
+  <ion-list *ngFor="let artist of artists">
+    <ion-list-header>
+      {{artist.name}}
+    </ion-list-header>
+    <ion-item>
+      <button ion-button full outline (click)="artistTapped($event, artist)">Tip the band!</button>
+    </ion-item>
+  </ion-list>
+
+  <!--<button ion-button full outline>Tip the band!</button>
+  <button ion-button full outline>Artist Check-in</button>-->
 </ion-content>
