--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -4,13 +4,12 @@
   </ion-navbar>
 </ion-header>
 
-<!--TODO work out background image style [ngStyle]="{'background-image': 'url(' + localPhoto + ')', 'background-repeat': 'no-repeat', 'background-size': 'cover'}"-->
-<ion-content>
+<ion-content [ngStyle]="{'background-image': 'url(' + localPhoto + ')', 'background-repeat': 'no-repeat', 'background-size': 'cover'}">
 
   <ion-list>
-    <button ion-item *ngFor="let artist of artists" (click)="artistTapped($event, artist)">Tip {{artist.name}}</button>
+    <button ion-button block large *ngFor="let artist of artists" (click)="artistTapped($event, artist)">Tip {{artist.name}}</button>
   </ion-list>
 
   
-  <button ion-button full outline [hidden]="artistAlreadyCheckedIn" (click)="artistCheckInTapped($event)">I'm playing here!</button>
+  <button ion-button block color="secondary" [hidden]="artistAlreadyCheckedIn" (click)="artistCheckInTapped($event)">I'm playing here!</button>
 </ion-content>
