Styling of buttons on the venue details page.

--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -11,5 +11,5 @@
   </ion-list>
 
   
-  <button ion-button block color="secondary" [hidden]="artistAlreadyCheckedIn" (click)="artistCheckInTapped($event)">I'm playing here!</button>
+  <button ion-button block large color="secondary" [hidden]="artistAlreadyCheckedIn" (click)="artistCheckInTapped($event)">I'm playing here!</button>
 </ion-content>
