Handling the first-time-using-the-app case.

--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Nearby</ion-title>
+    <ion-title>Where are you?</ion-title>
   </ion-navbar>
 </ion-header>
 
