--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Nearby" tabIcon="compass"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Activity" tabIcon="cash"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Artist" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Tip" tabIcon="cash"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Artist" tabIcon="person"></ion-tab>
 </ion-tabs>
