--- a/src/pages/tip/tip.html
+++ b/src/pages/tip/tip.html
@@ -22,7 +22,7 @@
     </ion-item>
     <ion-item style="text-align: center">
       <button ion-button block large (click)="tipTapped($event)">Tip ${{tipAmount}}.00 on Venmo</button>
-      <ion-note>Tips are made privately.</ion-note>
+      <ion-note>Payments made privately.</ion-note>
     </ion-item>
   </ion-list>
 </ion-content>
