--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -5,11 +5,12 @@
 </ion-header>
 
 <ion-content [ngStyle]="{'background-image': 'url(' + (localPhoto ? localPhoto : '') + ')', 'background-repeat': 'no-repeat', 'background-size': 'cover'}">
-
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content>
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-list>
     <button ion-button block large *ngFor="let artist of artists" (click)="artistTapped($event, artist)">Tip {{artist.name}}</button>
   </ion-list>
-
-  
   <button ion-button block large color="secondary" [hidden]="artistAlreadyCheckedIn" (click)="artistCheckInTapped($event)">I'm playing here!</button>
 </ion-content>
