--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -11,7 +11,7 @@
       <button ion-button block large (click)="getVenmoTapped($event)">Get Venmo for Tips</button>
     </ion-item>
     <ion-item [hidden]="paymentAppConfirmationHidden">
-        <ion-icon name="checkmark-circle-outline"></ion-icon>&nbsp;You already have Venmo.
+        <ion-icon name="checkmark-circle-outline"></ion-icon><strong>&nbsp;You already have Venmo.</strong>
     </ion-item>
     <ion-item>
       <button ion-button block large (click)="imAnArtistTapped($event)">I'm an Artist</button>
