--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -12,5 +12,5 @@
   <ion-list>
     <button ion-button block large *ngFor="let artist of artists" (click)="artistTapped($event, artist)">Tip {{artist.name}}</button>
   </ion-list>
-  <button ion-button block large color="secondary" [hidden]="artistAlreadyCheckedIn" (click)="artistCheckInTapped($event)">I'm playing here!</button>
+  <button ion-button block large color="secondary" [hidden]="hideCheckInButton" (click)="artistCheckInTapped($event)">I'm playing here!</button>
 </ion-content>
