--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Where are you?</ion-title>
+    <ion-searchbar placeholder="Where are you?" (ionInput)="onSearchInput($event)" [(ngModel)]="searchTerm">
+    </ion-searchbar>
+
   </ion-navbar>
 </ion-header>
 
@@ -9,7 +11,10 @@
     <ion-refresher-content>
     </ion-refresher-content>
   </ion-refresher>
+  <div text-center padding-top [hidden]="hideLoadingSpinner">
+    <ion-spinner></ion-spinner>
+  </div>
   <ion-list>
-    <button ion-item *ngFor="let venue of venues" (click)="venueTapped($event, venue)">{{ venue.venue.name }}</button>
+    <button ion-item *ngFor="let venue of venues" (click)="venueTapped($event, venue)">{{ venue.name }}</button>
   </ion-list>
 </ion-content>
