--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -12,7 +12,7 @@
   <div text-center padding-top [hidden]="hideLoadingSpinner">
     <ion-spinner></ion-spinner>
   </div>
-  <ion-list [hidden]="hideTipButtons">
+  <ion-list padding-top [hidden]="hideTipButtons">
     <button ion-button block large *ngFor="let artist of artists" (click)="artistTapped($event, artist)">Tip {{artist.name}}</button>
   </ion-list>
   <button ion-button block large color="secondary" [hidden]="hideCheckInButton" (click)="artistCheckInTapped($event)">I'm playing here!</button>
