--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -21,3 +21,6 @@
     <button ion-button block large color="secondary" [hidden]="hideCheckInButton" (click)="artistCheckInTapped($event)">I'm playing here!</button>
   </ion-item>
 </ion-content>
+<ion-footer text-center>
+  <a href="https://foursquare.com/v/foursquare-hq/{{selectedVenue.id}}" target="_system"><img src="assets/pbfsq.png" alt="Powered by Foursquare" /></a>
+</ion-footer>
