--- a/src/pages/artist/artist.html
+++ b/src/pages/artist/artist.html
@@ -9,12 +9,12 @@
     <ion-list-header>How should fans tip you?</ion-list-header>
     <ion-item>
       <ion-label color="primary" floating>Venmo Email (required)</ion-label>
-      <ion-input [(ngModel)]="artistEmail" type="email" max="254" formControlName="email"></ion-input>
+      <ion-input [(ngModel)]="artistEmail" type="email" maxlength="254" formControlName="email"></ion-input>
     </ion-item>
     <p *ngFor="let error of formErrors.email" class="valError">{{error}}</p>
     <ion-item>
       <ion-label color="primary" floating>Artist Name (required)</ion-label>
-      <ion-input max="50" formControlName="name" [(ngModel)]="artistName"></ion-input>
+      <ion-input maxlength="50" formControlName="name" [(ngModel)]="artistName"></ion-input>
     </ion-item>
     <p *ngFor="let error of formErrors.name" class="valError">{{error}}</p>
   </ion-list>
