--- a/src/pages/tip/tip.html
+++ b/src/pages/tip/tip.html
@@ -21,8 +21,8 @@
       <ion-textarea [(ngModel)]="comments"></ion-textarea>
     </ion-item>
     <ion-item style="text-align: center">
-      <button ion-button block large (click)="tipTapped($event)">Tip ${{tipAmount}}.00 on Venmo</button>
-      <ion-note>Payments made privately.</ion-note>
+      <button ion-button block large (click)="tipTapped($event)">Send Tip to Venmo</button>
+      <ion-note>Almost there!</ion-note>
     </ion-item>
   </ion-list>
 </ion-content>
