Removed redundant <strong>

--- a/src/pages/artist/artist.html
+++ b/src/pages/artist/artist.html
@@ -8,7 +8,7 @@
   <ion-list [formGroup]="artistForm">
     <ion-list-header>How should fans tip you?</ion-list-header>
     <ion-item>
-      <ion-label color="primary" floating>Venmo Email <strong><strong>(required)</strong></strong></ion-label>
+      <ion-label color="primary" floating>Venmo Email <strong>(required)</strong></ion-label>
       <ion-input [(ngModel)]="artistEmail" type="email" maxlength="254" formControlName="email"></ion-input>
     </ion-item>
     <p *ngFor="let error of formErrors.email" class="valError">{{error}}</p>
