Artist/fan separated workflow for first-time run

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Tip" tabIcon="cash"></ion-tab>
+<ion-tabs [selectedIndex]="showArtistPage ? 1 : 0">
+  <ion-tab [root]="tab1Root" tabTitle="Venues" tabIcon="microphone"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Artist" tabIcon="person"></ion-tab>
 </ion-tabs>
