--- a/src/pages/tip/tip.html
+++ b/src/pages/tip/tip.html
@@ -20,7 +20,7 @@
       <ion-label stacked>Comments (optional)</ion-label>
       <ion-textarea [(ngModel)]="comments"></ion-textarea>
     </ion-item>
-    <ion-item style="text-align: center">
+    <ion-item style="text-align: center;">
       <button ion-button block large (click)="tipTapped($event)">Send Tip to Venmo</button>
       <ion-note>Almost there!</ion-note>
     </ion-item>
