--- a/src/pages/artist/artist.html
+++ b/src/pages/artist/artist.html
@@ -6,22 +6,18 @@
 
 <ion-content>
   <ion-list [formGroup]="artistForm">
-    <ion-list-header>How should fans tip you?</ion-list-header>
+    <ion-list-header><strong>How should fans tip you?</strong></ion-list-header>
     <ion-item>
-      <ion-label color="primary" floating>Venmo Email <strong>(required)</strong></ion-label>
+      <ion-label color="primary" stacked>Venmo Email <strong>(required)</strong><span *ngFor="let error of formErrors.email" class="valError">{{error}}</span></ion-label>
       <ion-input [(ngModel)]="artistEmail" type="email" maxlength="254" formControlName="email"></ion-input>
     </ion-item>
-    <p *ngFor="let error of formErrors.email" class="valError">{{error}}</p>
     <ion-item>
-      <ion-label color="primary" floating>Confirm Venmo Email <strong>(required)</strong></ion-label>
+      <ion-label color="primary" stacked>Confirm Venmo Email <strong>(required)</strong><span *ngFor="let error of formErrors.emailConfirm" class="valError">{{error}}</span></ion-label>
       <ion-input [(ngModel)]="artistEmailConfirm" type="email" maxlength="254" formControlName="emailConfirm"></ion-input>
     </ion-item>
-    <p *ngFor="let error of formErrors.emailConfirm" class="valError">{{error}}</p>
     <ion-item>
-      <ion-label color="primary" floating>Artist Name <strong>(required)</strong></ion-label>
-      <ion-input maxlength="50" formControlName="name" [(ngModel)]="artistName"></ion-input>
+      <ion-label color="primary" stacked>Artist or Band Name <strong>(required)</strong><span *ngFor="let error of formErrors.name" class="valError">{{error}}</span></ion-label>
+      <ion-input maxlength="50" formControlName="name" placeholder="Fans will see this name." [(ngModel)]="artistName"></ion-input>
     </ion-item>
-    <p *ngFor="let error of formErrors.name" class="valError">{{error}}</p>
   </ion-list>
-  <p class="valError" [hidden]="fieldsRequiredMessageHidden">Both fields are required.</p>
 </ion-content>
