--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-searchbar placeholder="Where are you?" (ionInput)="onSearchInput($event)" [(ngModel)]="searchTerm">
     </ion-searchbar>
 
