--- a/src/pages/paymentAppCheck/paymentAppCheck.html
+++ b/src/pages/paymentAppCheck/paymentAppCheck.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Welcome to Tippy!</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Welcome!</ion-title>
   </ion-navbar>
 </ion-header>
 
