--- a/src/pages/artist/artist.html
+++ b/src/pages/artist/artist.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>My Artist Details</ion-title>
   </ion-navbar>
 </ion-header>
