FSq attribution styling; "choose later" tip option

--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -22,5 +22,7 @@
   </ion-item>
 </ion-content>
 <ion-footer text-center>
-  <a href="{{this.venueService.getAttributionLinkForVenue(selectedVenue.id)}}" target="_system"><img src="assets/pbfsq.png" alt="Powered by Foursquare" /></a>
+  <ion-toolbar>
+    <a href="{{this.venueService.getAttributionLinkForVenue(selectedVenue.id)}}" target="_system"><img src="assets/pbfsq.png" alt="Powered by Foursquare" /></a>
+  </ion-toolbar>
 </ion-footer>
