--- a/src/pages/tip/tip.html
+++ b/src/pages/tip/tip.html
@@ -14,6 +14,7 @@
         <ion-option value="5">$5</ion-option>
         <ion-option value="10">$10</ion-option>
         <ion-option value="20">$20</ion-option>
+        <ion-option value="">Choose Later</ion-option>
       </ion-select>
     </ion-item>
     <ion-item>
