Fixed Foursquare attribution link in iOS.

--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -23,6 +23,6 @@
 </ion-content>
 <ion-footer text-center>
   <ion-toolbar>
-    <a href="{{this.venueService.getAttributionLinkForVenue(selectedVenue.id)}}" target="_system"><img src="assets/pbfsq.png" alt="Powered by Foursquare" /></a>
+    <a href="{{this.venueService.getAttributionLinkForVenue(selectedVenue.id)}}"><img src="assets/pbfsq.png" alt="Powered by Foursquare" /></a>
   </ion-toolbar>
 </ion-footer>
