--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -14,7 +14,7 @@
   </div>
   <ion-list padding-top [hidden]="hideTipButtons">
     <ion-item>
-      <button ion-button block large *ngFor="let artist of artists" (click)="artistTapped($event, artist)"><span class="wrap-text">Tip {{artist.name}}</span></button>
+      <button ion-button block large *ngFor="let artist of artists | reverse" (click)="artistTapped($event, artist)"><span class="wrap-text">Tip {{artist.name}}</span></button>
     </ion-item>
   </ion-list>
   <ion-item>
