--- a/src/pages/venue-details/venue-details.html
+++ b/src/pages/venue-details/venue-details.html
@@ -18,7 +18,10 @@
     </ion-item>
   </ion-list>
   <ion-item>
-    <button ion-button block large color="secondary" [hidden]="hideCheckInButton" (click)="artistCheckInTapped($event)">I'm playing here!</button>
+    <button ion-button block large color="secondary" [hidden]="hideCheckInButton" (click)="artistCheckInTapped($event)">I'm playing here</button>
+  </ion-item>
+  <ion-item text-center>
+    <img src="assets/FB-f-Logo__blue_58.png" alt="Share to Facebook" (click)="facebookTapped($event)" />
   </ion-item>
 </ion-content>
 <ion-footer text-center>
